test_output_complete/test_summary_20251207_203301.txt
======================================================================
COMPREHENSIVE OFFLINE TEST - SUMMARY REPORT
======================================================================

Test Run: 20251207_203301
Start Time: 2025-12-07 20:33:01
Input Directory: TEST_INPUT_FILES
Output Directory: test_output_complete

----------------------------------------------------------------------
OVERALL STATISTICS
----------------------------------------------------------------------

Total Files Processed: 8
Success: 0
Errors: 8
Success Rate: 0.0%
Total Processing Time: 1.28 seconds
Average Time per File: 0.16 seconds
Total HTML Files Generated: 0
Total PDF Files Generated: 0

----------------------------------------------------------------------
DETAILED RESULTS
----------------------------------------------------------------------

1. 0511-N-extra.xlsx
   Status: ERROR
   Processing Time: 1.00 seconds
   Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>

2. 0511Wextra.xlsx
   Status: ERROR
   Processing Time: 0.02 seconds
   Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>

3. 3rdFinalNoExtra.xlsx
   Status: ERROR
   Processing Time: 0.03 seconds
   Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>

4. 3rdFinalVidExtra.xlsx
   Status: ERROR
   Processing Time: 0.08 seconds
   Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>

5. 3rdRunningNoExtra.xlsx
   Status: ERROR
   Processing Time: 0.04 seconds
   Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>

6. 3rdRunningVidExtra.xlsx
   Status: ERROR
   Processing Time: 0.04 seconds
   Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>

7. FirstFINALnoExtra.xlsx
   Status: ERROR
   Processing Time: 0.03 seconds
   Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>

8. FirstFINALvidExtra.xlsx
   Status: ERROR
   Processing Time: 0.03 seconds
   Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>

----------------------------------------------------------------------
ERROR DETAILS
----------------------------------------------------------------------

File: 0511-N-extra.xlsx
Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>
Traceback:
Traceback (most recent call last):
  File "C:\Users\Rajkumar\BillGeneratorUnified\test_all_input_files_offline.py", line 45, in process_file_complete
    print(f"     ✓ Excel processed successfully")
  File "C:\Users\Rajkumar\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>


File: 0511Wextra.xlsx
Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>
Traceback:
Traceback (most recent call last):
  File "C:\Users\Rajkumar\BillGeneratorUnified\test_all_input_files_offline.py", line 45, in process_file_complete
    print(f"     ✓ Excel processed successfully")
  File "C:\Users\Rajkumar\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>


File: 3rdFinalNoExtra.xlsx
Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>
Traceback:
Traceback (most recent call last):
  File "C:\Users\Rajkumar\BillGeneratorUnified\test_all_input_files_offline.py", line 45, in process_file_complete
    print(f"     ✓ Excel processed successfully")
  File "C:\Users\Rajkumar\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>


File: 3rdFinalVidExtra.xlsx
Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>
Traceback:
Traceback (most recent call last):
  File "C:\Users\Rajkumar\BillGeneratorUnified\test_all_input_files_offline.py", line 45, in process_file_complete
    print(f"     ✓ Excel processed successfully")
  File "C:\Users\Rajkumar\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>


File: 3rdRunningNoExtra.xlsx
Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>
Traceback:
Traceback (most recent call last):
  File "C:\Users\Rajkumar\BillGeneratorUnified\test_all_input_files_offline.py", line 45, in process_file_complete
    print(f"     ✓ Excel processed successfully")
  File "C:\Users\Rajkumar\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>


File: 3rdRunningVidExtra.xlsx
Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>
Traceback:
Traceback (most recent call last):
  File "C:\Users\Rajkumar\BillGeneratorUnified\test_all_input_files_offline.py", line 45, in process_file_complete
    print(f"     ✓ Excel processed successfully")
  File "C:\Users\Rajkumar\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>


File: FirstFINALnoExtra.xlsx
Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>
Traceback:
Traceback (most recent call last):
  File "C:\Users\Rajkumar\BillGeneratorUnified\test_all_input_files_offline.py", line 45, in process_file_complete
    print(f"     ✓ Excel processed successfully")
  File "C:\Users\Rajkumar\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>


File: FirstFINALvidExtra.xlsx
Error: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>
Traceback:
Traceback (most recent call last):
  File "C:\Users\Rajkumar\BillGeneratorUnified\test_all_input_files_offline.py", line 45, in process_file_complete
    print(f"     ✓ Excel processed successfully")
  File "C:\Users\Rajkumar\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2713' in position 5: character maps to <undefined>


